@@ -8,7 +8,7 @@ import javax.sound.sampled.*;
 import javax.swing.*;
 
 public class Main extends javax.swing.JFrame {
-    
+
     public Main() {
         initComponents();
         this.setLocationRelativeTo(null);
@@ -19,7 +19,7 @@ public class Main extends javax.swing.JFrame {
         Thread CambiarMain = new Thread(CPT);
         CambiarMain.start();
     }
-    
+
     @SuppressWarnings("unchecked")
     // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
@@ -40,10 +40,10 @@ public class Main extends javax.swing.JFrame {
         PatioFondo = new javax.swing.JLabel();
         Jf_VideoIntro = new javax.swing.JFrame();
         jPanel5 = new javax.swing.JPanel();
+        P_VideoIntro = new javax.swing.JPanel();
         P_TopBar4 = new javax.swing.JPanel();
         P_X4 = new javax.swing.JPanel();
         X4 = new javax.swing.JLabel();
-        P_VideoIntro = new javax.swing.JPanel();
         jPanel1 = new javax.swing.JPanel();
         P_TopBar = new javax.swing.JPanel();
         P_X = new javax.swing.JPanel();
@@ -271,6 +271,19 @@ public class Main extends javax.swing.JFrame {
         jPanel5.setMaximumSize(new java.awt.Dimension(640, 430));
         jPanel5.setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
 
+        javax.swing.GroupLayout P_VideoIntroLayout = new javax.swing.GroupLayout(P_VideoIntro);
+        P_VideoIntro.setLayout(P_VideoIntroLayout);
+        P_VideoIntroLayout.setHorizontalGroup(
+            P_VideoIntroLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 640, Short.MAX_VALUE)
+        );
+        P_VideoIntroLayout.setVerticalGroup(
+            P_VideoIntroLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 400, Short.MAX_VALUE)
+        );
+
+        jPanel5.add(P_VideoIntro, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 30, 640, 400));
+
         P_TopBar4.setBackground(new java.awt.Color(0, 0, 0));
         P_TopBar4.setForeground(new java.awt.Color(153, 255, 153));
         P_TopBar4.setPreferredSize(new java.awt.Dimension(640, 0));
@@ -338,19 +351,6 @@ public class Main extends javax.swing.JFrame {
         );
 
         jPanel5.add(P_TopBar4, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 0, 640, 30));
-
-        javax.swing.GroupLayout P_VideoIntroLayout = new javax.swing.GroupLayout(P_VideoIntro);
-        P_VideoIntro.setLayout(P_VideoIntroLayout);
-        P_VideoIntroLayout.setHorizontalGroup(
-            P_VideoIntroLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGap(0, 640, Short.MAX_VALUE)
-        );
-        P_VideoIntroLayout.setVerticalGroup(
-            P_VideoIntroLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGap(0, 400, Short.MAX_VALUE)
-        );
-
-        jPanel5.add(P_VideoIntro, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 30, 640, 400));
 
         javax.swing.GroupLayout Jf_VideoIntroLayout = new javax.swing.GroupLayout(Jf_VideoIntro.getContentPane());
         Jf_VideoIntro.getContentPane().setLayout(Jf_VideoIntroLayout);
@@ -555,12 +555,16 @@ public class Main extends javax.swing.JFrame {
 
     private void B_AdventureMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_B_AdventureMouseClicked
         // TODO add your handling code here:
+        /*
+        --module-path "C:\Users\rinal\Desktop\rafa tareas\Nuevos\Progra 2\PlantasVsZombie_JoseLobo\LibreriasPersonalizadas\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml
+        --add-modules javafx.web,javafx.media,javafx.swing
+         */
         usuario.setPrimeraVez(true);
         if (usuario.isPrimeraVez()) {
             Music.stop();
-            JF_PatioFrontal.pack();
+            Jf_VideoIntro.pack();
             Jf_MenuPrincipal.setVisible(false);
-            JF_PatioFrontal.setLocationRelativeTo(Jf_MenuPrincipal);
+            Jf_VideoIntro.setLocationRelativeTo(Jf_MenuPrincipal);
             Music.stop();
             Jf_VideoIntro.setVisible(true);
             try {
@@ -587,19 +591,19 @@ public class Main extends javax.swing.JFrame {
 
     private void P_X4MouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_P_X4MouseEntered
         // TODO add your handling code here:
-        P_X1.setBackground(Color.RED);
+        P_X4.setBackground(Color.RED);
     }//GEN-LAST:event_P_X4MouseEntered
 
     private void P_X4MouseExited(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_P_X4MouseExited
         // TODO add your handling code here:
-        P_X1.setBackground(Color.BLACK);
+        P_X4.setBackground(Color.BLACK);
     }//GEN-LAST:event_P_X4MouseExited
 
     private void P_TopBar4MouseDragged(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_P_TopBar4MouseDragged
         // TODO add your handling code here:
         int x = evt.getXOnScreen();
         int y = evt.getYOnScreen();
-        JF_PatioFrontal.setLocation(x - xMouse, y - yMouse);
+        Jf_VideoIntro.setLocation(x - xMouse, y - yMouse);
     }//GEN-LAST:event_P_TopBar4MouseDragged
 
     private void P_TopBar4MousePressed(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_P_TopBar4MousePressed
@@ -644,7 +648,7 @@ public class Main extends javax.swing.JFrame {
         });
         //Aqui esta el main
     }
-    
+
     public static Clip playMusic(String filepath) {
         try {
             File music = new File(filepath);
@@ -692,5 +696,5 @@ public class Main extends javax.swing.JFrame {
     private Clip Music;
     private Usuario usuario = new Usuario();
     private Reproductor video;
-    
+
 }
